fix namespace loading when no k3k installation detected

--- a/pkg/virtual-clusters/l10n/en-us.yaml
+++ b/pkg/virtual-clusters/l10n/en-us.yaml
@@ -100,7 +100,11 @@ k3k:
           one {This policy is currently applied to one virtual cluster. Deleting the policy now will remove resource constraints from that cluster.}
           other {This policy is currently applied to {count} virtual clusters. Deleting the policy now will remove resource constraints from those clusters.}
         }
-      multiplePolicies: The selected policies are collectively applied to {count} virtual clusters. Deleting them now will remove resource constraints from those clusters.
+      multiplePolicies: |-
+        { count, plural,
+          one {The selected policies are collectively applied to one virtual cluster. Deleting the policies now will remove resource constraints from that cluster.}
+          other {The selected policies are currently applied to {count} virtual clusters. Deleting the policies now will remove resource constraints from those clusters.}
+        }
   targetNamespace:
     label: Target Namespace
   hostCluster:
