--- a/pkg/virtual-clusters/l10n/en-us.yaml
+++ b/pkg/virtual-clusters/l10n/en-us.yaml
@@ -112,7 +112,7 @@ k3k:
     placeholder: The cluster that will host this virtual cluster
     tooltip: The host must have the K3K helm chart installed
     notInstalled: The K3K controller must be installed in each cluster to be used as a host for virtual clusters. Follow manual installation instructions <a aria-label='link to the K3K github repository' href='https://github.com/rancher/K3K/tree/main?tab=readme-ov-file#install-the-K3K-controller' target="_blank" rel="noopener noreferrer nofollow">here</a> or click below to install the K3K chart with default values.
-    installK3K: Install K3K
+    installK3k: Install K3K
     didInstall: K3K installed
   mode:
     label: Virtual cluster mode
