--- a/pkg/virtual-clusters/l10n/en-us.yaml
+++ b/pkg/virtual-clusters/l10n/en-us.yaml
@@ -199,12 +199,34 @@ k3k:
     importingCluster: Error importing virtual cluster
     loadingPolicies: Error fetching virtual cluster policies from {cluster}
     loadingNamespaces: Error fetching namespaces from {cluster}
+    creatingRoles: 'Error creating virtual cluster roles'
   landingPage:
     title: Virtual Clusters
     subtitle: Lightweight, fully isolated Kubernetes environments running inside your cluster
     description: Virtual clusters (powered by K3k) let you create self-service, isolated Kubernetes environments without the overhead of managing full clusters.
     prime: The virtual clusters UI extension is only available in Rancher Prime.
     local: Installing k3k in the local Rancher cluster is not recommended. Navigate to <a href="{managerUrl}">Cluster Management</a> to import and existing cluster or provision a new one.
+    permission: |-
+        The K3K helm chart may not be installed on this cluster, or you might not have sufficient permissions.<br/><br/>
+        <strong>Requirements</strong><br/><br/>
+        To install K3K:
+        <ul>
+          <li>Permission to create namespaces</li>
+          <li>Permission to create catalog.cattle.io.app resources</li>
+        </ul>
+        To provision Virtual Clusters:
+        <ul>
+        <li>
+        At minimum, the following permissions:
+          <ul>
+            <li>“Virutal Cluster Policy Read” cluster role</li>
+            <li>“Virtual Cluster Admin” project role.</li>
+          </ul>
+        </li>
+        </ul>
+        Contact your cluster administrator for further assistance. 
+    virtual: 
+      description: <strong>Installing virtual clusters within virutal clusters in not currently supported via the UI.</strong><br/><br/> Select a <a href="{managerUrlFiltered}">non-virtualised host cluster</a> for your Virtual Cluster.
     steps:
       title: 'Quick guide:'
       step1:
