update configmaps key to be consistent with other count keys; update translations so resource type spacing matches what is used elsewhere

--- a/pkg/virtual-clusters/l10n/en-us.yaml
+++ b/pkg/virtual-clusters/l10n/en-us.yaml
@@ -259,11 +259,12 @@ typeLabel:
 
 resourceQuota:
   generic:
-    countPersistentVolumeClaims: Persistent Volume Claim Count
+    countPersistentVolumeClaims: PersistentVolumeClaim Count
     countPods: Pod Count
-    countReplicationControllers: Replication Controller Count
+    countReplicationControllers: ReplicationController Count
     requestsNvidiaComGpu: GPU Requests
     countSecrets: Secret Count
     countServices: Service Count
-    servicesLoadBalancers: Load Balancer Count
-    countServicesNodePorts: NodePort Count
+    countConfigMaps: ConfigMap Count
+    servicesLoadBalancers: LoadBalancer Count
+    servicesNodePorts: NodePort Count
