Fix resource quota format (#97)
* fix quota types

* update configmaps key to be consistent with other count keys; update translations so resource type spacing matches what is used elsewhere

--- a/pkg/virtual-clusters/l10n/en-us.yaml
+++ b/pkg/virtual-clusters/l10n/en-us.yaml
@@ -256,3 +256,15 @@ typeLabel:
       one { Virtual Cluster Policy }
       other { Virtual Cluster Policies }
     }
+
+resourceQuota:
+  generic:
+    countPersistentVolumeClaims: PersistentVolumeClaim Count
+    countPods: Pod Count
+    countReplicationControllers: ReplicationController Count
+    requestsNvidiaComGpu: GPU Requests
+    countSecrets: Secret Count
+    countServices: Service Count
+    countConfigMaps: ConfigMap Count
+    servicesLoadBalancers: LoadBalancer Count
+    servicesNodePorts: NodePort Count
